[package]
name = "study-cd-archive-generator-emulator"
version = "0.0.1"
authors = ["Gelnuro <gelnuro@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Study to CD archive generation emulator"
categories = ["dicom", "dicom-archive"]
keywords = ["dicom", "store", "archive", "dicom-archive"]
readme = "README.md"

[[bin]]
name = "dicom-listener"
path = "src/server/dicom/main.rs"
[[bin]]
name = "rest-listener"
path = "src/server/rest/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
dicom-core = { version = "0.6.2" }
dicom-ul = { version = "0.5.1" }
dicom-object = { version = "0.6.2" }
dicom-encoding = { version = "0.6.1" }
dicom-dictionary-std = { version = "0.6.1" }
dicom-transfer-syntax-registry = { version = "0.6.1" }
snafu = "0.7.3"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
axum = "0.6"
tokio = { version = "1.22.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.149", features = ["derive"] }
utoipa = { features = ["axum_extras"], version = "4.0.0" }
utoipa-swagger-ui = { features = ["axum"], version = "4.0.0" }